--- a/package.json
+++ b/package.json
@@ -6,19 +6,36 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
+    "@types/react-redux": "^7.1.33",
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.12",
+    "@types/redux-persist": "^4.3.1",
+    "@types/redux-saga": "^0.10.5",
+    "@types/reselect": "^2.2.0",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.7",
+    "axios": "^1.6.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.3",
+    "reselect": "^5.0.1",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5",
+    "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
