Apply finishing touches #3

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Medley",
-  "name": "Medley Assessment",
+  "short_name": "Assessment",
+  "name": "Decemebr 2023 Assessment",
   "icons": [
     {
       "src": "favicon.ico",
